<resources>
    <string name="app_name">TDM1_Demo_Dz_NOW</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news">News</string>
    <string name="tab_text_1">A la une</string>
    <string name="tab_text_2">Politique</string>
    <string name="tab_text_3">Culture</string>
    <string name="tab_text_4">Sport</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_sauvgarde">Favoris</string>
    <string name="request_client_id">831213750868-hi255cs8hd9ilcnjh0p7fa8349r2n570.apps.googleusercontent.com</string>
    <string name="facebook_app_id">482567248989741</string>
    <string name="fb_login_protocol_scheme">fb482567248989741</string>
    <string name="sign_out_button">Sign out</string>
    <string name="sauvgardes">Sauvgardes</string>
    <string name="title_activity_main">DZ NOW</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="signets">Signets</string>
    <string name="Sites_web">Sites web</string>
    <string name="art">Articles sauvgardés</string>
    <string name="Article">Article</string>


</resources>
